// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Map/> should render with long and lat props 1`] = `
<div>
  <img
    onClick={[Function]}
    src="https://maps.googleapis.com/maps/api/staticmap?key=AIzaSyAu2ghVBWddafMcKs6b__fCF7hGkTyb0v8&zoom=13&size=286x135&maptype=roadmap&markers=color:red%7Clabel:S%7C0,0"
    style={
      Object {
        "cursor": "pointer",
        "height": "135px",
        "width": "286px",
      }
    }
  />
</div>
`;

exports[`<Map/> should render without props 1`] = `
<div>
  <img
    onClick={[Function]}
    src="https://maps.googleapis.com/maps/api/staticmap?key=AIzaSyAu2ghVBWddafMcKs6b__fCF7hGkTyb0v8&zoom=13&size=286x135&maptype=roadmap&markers=color:red%7Clabel:S%7Cundefined,undefined"
    style={
      Object {
        "cursor": "pointer",
        "height": "135px",
        "width": "286px",
      }
    }
  />
</div>
`;
